[gd_scene load_steps=17 format=3 uid="uid://djnknqukc4vyo"]

[ext_resource type="Script" uid="uid://b61f1js1mish4" path="res://Scripts/Camera25D.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://c8jk5lxs0r7go" path="res://Scripts/HUD.gd" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://xdecdds51kx7" path="res://icon.svg" id="3_h2yge"]
[ext_resource type="Texture2D" uid="uid://bdb50e8ye8rpe" path="res://Assets2D/white_block.png" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://bpsrvsxrnp48b" path="res://lighting_manager.gd" id="4_272bh"]
[ext_resource type="Script" uid="uid://behuxci437l03" path="res://Scripts/GameManager.gd" id="5_lquwl"]
[ext_resource type="Script" uid="uid://c3ukw8jvh1hkg" path="res://sky_manager.gd" id="7_5vw27"]
[ext_resource type="Script" uid="uid://dx7gfkxka27r4" path="res://Scripts/EventManager.gd" id="8_ynf5e"]
[ext_resource type="PackedScene" uid="uid://d1lloedybbpg7" path="res://Scenes/EventMarker.tscn" id="9_ynf5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(0.19879684, 0.5212005, 0.66384554, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_h2yge"]

[sub_resource type="Theme" id="Theme_1bvp3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynf5e"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("2_0xm2m")

[node name="Panel" type="Panel" parent="HUD"]
offset_right = 39.86207
offset_bottom = 40.0
scale = Vector2(29, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_1bvp3")

[node name="TimeLabel" type="Label" parent="HUD/Panel"]
layout_mode = 0
offset_top = 8.0
offset_right = 443.0008
offset_bottom = 31.0
scale = Vector2(0.0344827, 1)
horizontal_alignment = 3

[node name="pause_button" type="Button" parent="HUD/Panel"]
layout_mode = 0
offset_left = 32.37931
offset_top = 6.0
offset_right = 168.3793
offset_bottom = 142.0
scale = Vector2(0.007361722, 0.22620603)
theme_override_icons/icon = ExtResource("3_h2yge")
toggle_mode = true

[node name="speed1" type="Button" parent="HUD/Panel"]
layout_mode = 0
offset_left = 33.62069
offset_top = 6.0
offset_right = 169.6207
offset_bottom = 142.0
scale = Vector2(0.007361722, 0.22620603)
theme_override_icons/icon = ExtResource("3_h2yge")
toggle_mode = true

[node name="speed2" type="Button" parent="HUD/Panel"]
layout_mode = 0
offset_left = 35.93103
offset_top = 6.0000005
offset_right = 171.93103
offset_bottom = 142.0
scale = Vector2(0.007361722, 0.22620603)
theme_override_icons/icon = ExtResource("3_h2yge")
toggle_mode = true

[node name="speed3" type="Button" parent="HUD/Panel"]
layout_mode = 0
offset_left = 38.068962
offset_top = 6.0
offset_right = 174.06897
offset_bottom = 142.0
scale = Vector2(0.007361722, 0.22620603)
theme_override_icons/icon = ExtResource("3_h2yge")
toggle_mode = true

[node name="DayCycle" type="TextureProgressBar" parent="HUD/Panel"]
material = SubResource("CanvasItemMaterial_h2yge")
layout_mode = 0
offset_left = 15.586206
offset_top = -1.9999999
offset_right = 143.58621
offset_bottom = 126.0
scale = Vector2(0.041171722, 0.34711513)
theme = SubResource("Theme_1bvp3")
rounded = true
fill_mode = 4
texture_under = ExtResource("4_1bvp3")
texture_progress = ExtResource("4_1bvp3")
tint_under = Color(0.00082949136, 0.0007313117, 6.217525e-05, 1)
tint_over = Color(0.601223, 0.601223, 0.60122293, 1)
tint_progress = Color(0.74946034, 0.780041, 0.23402846, 1)

[node name="ClockLabel" type="Label" parent="HUD/Panel"]
layout_mode = 0
offset_left = 22.689651
offset_top = 5.0
offset_right = 141.69002
offset_bottom = 35.0
scale = Vector2(0.0344827, 1)

[node name="EventCard" type="Panel" parent="HUD/Panel"]
layout_mode = 0
offset_left = 26.862068
offset_top = 138.0
offset_right = 39.37928
offset_bottom = 511.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ynf5e")

[node name="TitleLabel" type="Label" parent="HUD/Panel/EventCard"]
layout_mode = 0
offset_left = 0.5517235
offset_top = 15.0
offset_right = 326.55228
offset_bottom = 45.0
scale = Vector2(0.0344827, 1)

[node name="BodyLabel" type="Label" parent="HUD/Panel/EventCard"]
layout_mode = 0
offset_left = 0.75862
offset_top = 71.0
offset_right = 326.75916
offset_bottom = 273.0
scale = Vector2(0.0344827, 1)
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="HUD/Panel/EventCard"]
layout_mode = 0
offset_left = 0.5172405
offset_top = 336.0
offset_right = 136.51724
offset_bottom = 472.0
scale = Vector2(0.007361722, 0.22620603)
theme_override_icons/icon = ExtResource("3_h2yge")
toggle_mode = true

[node name="LightingManager" type="Node" parent="." node_paths=PackedStringArray("sun")]
script = ExtResource("4_272bh")
sun = NodePath("Sol")

[node name="Sol" type="DirectionalLight3D" parent="LightingManager"]
transform = Transform3D(-0.97629213, -0.03023468, 0.21433519, 0.070800565, -0.9803342, 0.18420653, 0.20455071, 0.19501443, 0.9592332, 10.254489, 11.460214, 20.493696)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="floor" type="CSGBox3D" parent="."]
transform = Transform3D(6.1774917, 0, 0, 0, 0.8, 0, 0, 0, 5.3945575, 2.0160599, 0, 3.6000004)
size = Vector3(14, 1, 18)

[node name="Predios1" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Predios1"]
size = Vector3(1, 2, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -1.0849164, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -2.218171, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, -3.4439213, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.69849813, 0, 0, 0, 1, 0, -0.6317651, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D10" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -1.0849164, -0.2553466, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D11" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -2.218171, -0.2553466, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D12" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, -3.4439213, -0.22065365, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D8" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.7421135, 0, 0, 0, 1, 3.3300855, -0.5103369, -1.3975029)
size = Vector3(1, 2, 1)

[node name="CSGBox3D9" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.6669287, 0, 0, 0, 1, 3.3300855, -0.31677866, -2.5229406)
size = Vector3(1, 2, 1)

[node name="CSGBox3D6" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.2314398, 0, 0, 0, 1.177168, 2.1165488, -0.4801581, -1.4283737)
size = Vector3(1, 2, 1)

[node name="CSGBox3D7" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, 2.1165488, -0.31677866, -2.5439992)
size = Vector3(1, 2, 1)

[node name="CSGBox3D13" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.7421135, 0, 0.99997276, 0, 0.0073826397, 6.108329, -0.5103369, -1.3975029)
size = Vector3(1, 2, 1)

[node name="CSGBox3D14" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.6669287, 0, 0.99997276, 0, 0.0073826397, 6.108329, -0.31677866, -2.5229406)
size = Vector3(1, 2, 1)

[node name="CSGBox3D15" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(0.0073826397, 0, -1.177136, 0, 0.2314398, 0, 0.99997276, 0, 0.008690608, 4.8947916, -0.4801581, -1.4283737)
size = Vector3(1, 2, 1)

[node name="CSGBox3D16" type="CSGBox3D" parent="Predios1"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.9388425, 0, 0.99997276, 0, 0.0073826397, 4.8947916, -0.31677866, -2.5439992)
size = Vector3(1, 2, 1)

[node name="Predios2" type="CSGCombiner3D" parent="."]
transform = Transform3D(-0.9999387, 0, 0.01108253, 0, 1.5, 0, -0.01108253, 0, -0.9999387, 3.0496607, 1.5, 6.8009925)

[node name="CSGBox3D" type="CSGBox3D" parent="Predios2"]
size = Vector3(1, 2, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -1.0849164, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -2.218171, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, -3.4439213, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.69849813, 0, 0, 0, 1, 0, -0.6317651, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D10" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -1.0849164, -0.2553466, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D11" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -2.218171, -0.2553466, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D12" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, -3.4439213, -0.22065365, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D8" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.7421135, 0, 0, 0, 1, 3.3300855, -0.5103369, -1.3975029)
size = Vector3(1, 2, 1)

[node name="CSGBox3D9" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.6669287, 0, 0, 0, 1, 3.3300855, -0.31677866, -2.5229406)
size = Vector3(1, 2, 1)

[node name="CSGBox3D6" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.2314398, 0, 0, 0, 1.177168, 2.1165488, -0.4801581, -1.4283737)
size = Vector3(1, 2, 1)

[node name="CSGBox3D7" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, 2.1165488, -0.31677866, -2.5439992)
size = Vector3(1, 2, 1)

[node name="CSGBox3D13" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.7421135, 0, 0.99997276, 0, 0.0073826397, 6.108329, -0.5103369, -1.3975029)
size = Vector3(1, 2, 1)

[node name="CSGBox3D14" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.6669287, 0, 0.99997276, 0, 0.0073826397, 6.108329, -0.31677866, -2.5229406)
size = Vector3(1, 2, 1)

[node name="CSGBox3D15" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(0.0073826397, 0, -1.177136, 0, 0.2314398, 0, 0.99997276, 0, 0.008690608, 4.8947916, -0.4801581, -1.4283737)
size = Vector3(1, 2, 1)

[node name="CSGBox3D16" type="CSGBox3D" parent="Predios2"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.9388425, 0, 0.99997276, 0, 0.0073826397, 4.8947916, -0.31677866, -2.5439992)
size = Vector3(1, 2, 1)

[node name="Predios3" type="CSGCombiner3D" parent="."]
transform = Transform3D(-0.010175143, 0, 0.9999483, 0, 1.5, 0, -0.9999483, 0, -0.010175143, 10.483565, 1.5, 2.6305094)

[node name="CSGBox3D" type="CSGBox3D" parent="Predios3"]
size = Vector3(1, 2, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -1.0849164, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D3" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -2.218171, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D4" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, -3.4439213, -0.31677866, 0)
size = Vector3(1, 2, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.69849813, 0, 0, 0, 1, 0, -0.6317651, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D10" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -1.0849164, -0.2553466, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D11" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.6, 0, 0, 0, 1, -2.218171, -0.2553466, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D12" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, -3.4439213, -0.22065365, 1.1207447)
size = Vector3(1, 2, 1)

[node name="CSGBox3D8" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.7421135, 0, 0, 0, 1, 3.3300855, -0.5103369, -1.3975029)
size = Vector3(1, 2, 1)

[node name="CSGBox3D9" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.6669287, 0, 0, 0, 1, 3.3300855, -0.31677866, -2.5229406)
size = Vector3(1, 2, 1)

[node name="CSGBox3D6" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.2314398, 0, 0, 0, 1.177168, 2.1165488, -0.4801581, -1.4283737)
size = Vector3(1, 2, 1)

[node name="CSGBox3D7" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(1, 0, 0, 0, 0.9388425, 0, 0, 0, 1, 2.1165488, -0.31677866, -2.5439992)
size = Vector3(1, 2, 1)

[node name="CSGBox3D13" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.7421135, 0, 0.99997276, 0, 0.0073826397, 6.108329, -0.5103369, -1.3975029)
size = Vector3(1, 2, 1)

[node name="CSGBox3D14" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.6669287, 0, 0.99997276, 0, 0.0073826397, 6.108329, -0.31677866, -2.5229406)
size = Vector3(1, 2, 1)

[node name="CSGBox3D15" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(0.0073826397, 0, -1.177136, 0, 0.2314398, 0, 0.99997276, 0, 0.008690608, 4.8947916, -0.4801581, -1.4283737)
size = Vector3(1, 2, 1)

[node name="CSGBox3D16" type="CSGBox3D" parent="Predios3"]
transform = Transform3D(0.0073826397, 0, -0.99997276, 0, 0.9388425, 0, 0.99997276, 0, 0.0073826397, 4.8947916, -0.31677866, -2.5439992)
size = Vector3(1, 2, 1)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.9674787, 0.053409576, -0.24724989, -0.042495266, 0.9292448, 0.36701265, 0.24935769, 0.3655838, -0.896755, -1.6779488, 2.1916804, -3.7879333)
script = ExtResource("1_ig7tw")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("hud", "event_system")]
script = ExtResource("5_lquwl")
hud = NodePath("../HUD")
event_system = NodePath("../EventManager")

[node name="SkyManager" type="Node" parent="." node_paths=PackedStringArray("world_env")]
script = ExtResource("7_5vw27")
world_env = NodePath("../WorldEnvironment")

[node name="EventManager" type="Node3D" parent="." node_paths=PackedStringArray("city_center")]
script = ExtResource("8_ynf5e")
marker_scene = ExtResource("9_ynf5e")
city_center = NodePath("../CityCenter")
city_radius = 30.0

[node name="CityCenter" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6987085, 0, 2.2813816)
